# monorepo_setup

./: README.md  WORKSPACE.bazel  bazel-bin  bazel-mono_repo  bazel-out  bazel-testlogs
projects/feed_management/: BUILD.bazel  db.sqlite3  manage.py
projects/feed_management/address/: admin.py  models.py  permissions.py  serializers.py  views.py
projects/feed_management/address/migrations/: 0001_initial.py
projects/feed_management/address/tests/: test_address_app.py
projects/feed_management/feed/: admin.py  models.py  permissions.py  serializers.py  views.py
projects/feed_management/feed/migrations/: 0001_initial.py  0002_alter_feed_image.py  0003_feed_count_alter_feed_image.py  0004_reportonfeed.py
projects/feed_management/feed/tests/: test_feed_api.py
projects/feed_management/feed_management/: asgi.py  routers.py  settings.py  urls.py  wsgi.py
projects/feed_management/users/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  views.py
projects/feed_management/users/management/commands/: add_default_user_groups.py
projects/feed_management/users/migrations/: 0001_initial.py  0002_user_group.py  0003_remove_user_group.py  0004_alter_user_id.py  0005_alter_user_id.py
projects/feed_management/users/tests/: test_user_api.py
